# templates

./: .gitignore  flake.nix
haskell/: .envrc  .gitignore  LICENSE  flake.nix  hello-world.cabal
rust/: .envrc  Cargo.toml  flake.nix
