cabal-version:   3.0
name:            hello-world
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          vigress8
maintainer:      vig@disroot.org
build-type:      Simple

executable hello-world
    ghc-options: -Wall
    main-is:          Main.hs
    build-depends:    base
    hs-source-dirs:   src
    default-language: Haskell2010
